# university_labs

./: .gitignore  README.md
data-structures/ds_sem4_lab1/: CMakeLists.txt  HashSet.h  HashString.h  HashTable.h  Hashable.h  Logger.h  MyClass.h  main.cpp
data-structures/ds_sem4_lab2/: CMakeLists.txt  InclusionExclusionCalculator.h  Lab.h  README.md  TestLab.h  main.cpp
data-structures/ds_sem4_lab2/test/: TestInclusionExclusionCalculator.h
data-structures/ds_sem4_lab3/: CMakeLists.txt  README.md  TicTacToeField.h  TicTacToeWinCalculator.h  TicTacToeWinPossibilityCalculator.h  main.cpp
data-structures/ds_sem4_lab4/: CMakeLists.txt  main.cpp
data-structures/ds_sem4_lab5/: CMakeLists.txt  Empire.h  README.md  main.cpp
data-structures/ds_sem4_lab6/: CMakeLists.txt  README.md  main.cpp
ds_sem3_lab1/: CMakeLists.txt  HashString.h  HashTable.h  Hashable.h  MyClass.h  main.cpp
ds_sem4_lab1/: HashString.h  HashTable.h  Hashable.h  main.cpp
ds_sem4_lab7/: CMakeLists.txt  README.md
semester_4/data-structures/ds_sem4_lab1/: Logger.h  Record.h
semester_4/data-structures/ds_sem4_lab3/: TicTacToeField.h  main.cpp
semester_5/arduino/: code.md
semester_5/c_sharp/cs_labs/: cs_labs.sln
semester_5/computer_graphics/lab_1/: Box.cpp  Box.h  CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
semester_5/computer_graphics/lab_1/OpenGL/glad/include/glad/: glad.h
semester_5/computer_graphics/lab_1/OpenGL/glad/src/: glad.c
semester_5/computer_graphics/lab_2/: AffineTransform.h  CMakeLists.txt  Model2D.cpp  Model2D.h  README.md  Render2D.cpp  Render2D.h  main.cpp
(+229 files in other folders)
